--- a/index.html
+++ b/index.html
@@ -11,10 +11,8 @@
     
     Or have a listen to my Icecast stream, it plays 24/7 Sonic music.
     <object data="http://15.204.236.62:8000/maril.ogg" type="audio/ogg">
-      <p>Your browser (or device) does not support Icecast streams.
-         Please try again on another browser.
-      </p>
-  </object>
+      <p>Your browser (or device) does not support Icecast streams.<br>Please try again on another browser.</p>
+    </object>
     </p>
   </body>
 </html>
