--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
     <p>Nothing here yet,<br>come back later.
     
     Or have a listen to my Icecast stream, it plays 24/7 Sonic music.
-    <object data="http://15.204.236.62:8000/maril.ogg" type="audio/ogg">
-      <p>Your browser (or device) does not support Icecast streams.<br>Please try again on another browser.</p>
-    </object>
+    <audio>
+        <source src="http://relay.publicdomainradio.org/classical.mp3" type="audio/mpeg">
+        <p>Your browser (or device) does not support Icecast streams.<br>Please try again on another browser.</p>
+    </audio>
     </p>
   </body>
 </html>
