--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     
     Or have a listen to my Icecast stream, it plays 24/7 Sonic music.
     <audio>
-        <source src="http://relay.publicdomainradio.org/classical.mp3" type="audio/mpeg">
+        <source src="http://15.204.236.62:8000/maril.ogg" type="audio/ogg">
         <p>Your browser (or device) does not support Icecast streams.<br>Please try again on another browser.</p>
     </audio>
     </p>
