--- a/index.html
+++ b/index.html
@@ -10,10 +10,7 @@
     <p>Nothing here yet,<br>come back later.
     <br><br>
     Or have a listen to my Icecast stream,<br>it plays 24/7 Sonic music.<br>
-    <audio controls>
-        <source src="http://15.204.236.62:8000/maril.ogg" type="audio/ogg">
-        <p>Your browser (or device) does not support Icecast streams.<br>Please try again on another browser.</p>
-    </audio>
+    <audio controls src="http://15.204.236.62:8000/maril.ogg" type="audio/ogg">>
     </p>
   </body>
 </html>
