--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
     <p>Nothing here yet,<br>come back later.
     <br><br>
     Or have a listen to my Icecast stream,<br>it plays 24/7 Sonic music.<br>
-    <audio controls>
-      <source src="http://15.204.236.62:8000/maril.ogg;" type="audio/vorbis"/>
-    </audio>
+    <audio src="http://15.204.236.62:8000/maril.ogg" />
     </p>
   </body>
 </html>
