--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <p>Nothing here yet,<br>come back later.
     <br><br>
     Or have a listen to my Icecast stream,<br>it plays 24/7 Sonic music.<br>
-    <a href="http://15.204.236.62:8000/maril.ogg.m3u"><p>http://15.204.236.62:8000/maril.ogg</p></a><br>
+    <a href="http://15.204.236.62:8000/maril.ogg"><p>http://15.204.236.62:8000/maril.ogg</p></a><br>
     <a href="http://15.204.236.62:8000/maril.ogg.m3u"><p>download m3u</p></a>
     </p>
   </body>
