--- a/index.html
+++ b/index.html
@@ -1,17 +1,15 @@
 <html>
   <head>
-    <title>
-      maril.dev
-    </title>
+    <title>Marilyn's Webilyn</title>
   </head>
 
   <body>
-    <h1>maril.dev</h1>
+    <h1>Marilyn's Webilyn</h1>
     <p>Nothing here yet,<br>come back later.
-    <br><br>
-    Or have a listen to my Icecast stream,<br>it plays 24/7 Sonic music.<br>
-    <a href="http://15.204.236.62:8000/maril.ogg"><p>http://15.204.236.62:8000/maril.ogg</p></a><br>
-    <a href="http://15.204.236.62:8000/maril.ogg.m3u"><p>download m3u</p></a>
+      <br><br>
+      Or have a listen to my Icecast stream, it plays 24/7 Sonic music.<br>
+      <a href="http://15.204.236.62:8000/maril.ogg">http://15.204.236.62:8000/maril.ogg</a><br>
+      <a href="http://15.204.236.62:8000/maril.ogg.m3u">download m3u</a>
     </p>
   </body>
 </html>
