--- a/blog.html
+++ b/blog.html
@@ -5,6 +5,18 @@
   </head>
 
   <body>
-    <p>Nothing here yet. Come back later.</p>
+    <div class='entry'>
+      <h2></h2>
+      <h4>10 Jan. 2025</h4>
+      <hr>
+      <p>
+        Last night I checked my text messages to find that my girlfriend, 
+        who shall not be named for privacy, had broke up with me. 
+        This brought down my mood a bit, but I'm trying to remain neutral 
+        to not put worry into others. As I'm typing this, I have started 
+        work on making a blog page for <a href='https://maril.dev'>maril.dev</a>, in which 
+        itself is still a placeholder.
+      </p>
+    </div>
   </body>
 </html>
