--- a/blog.html
+++ b/blog.html
@@ -6,7 +6,7 @@
 
   <body>
     <div class='entry'>
-      <h2></h2>
+      <h2>Marilyn's Blogilyn</h2>
       <h4>10 Jan. 2025</h4>
       <hr>
       <p>
