--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
   <body>
     <h1>Marilyn's Webilyn</h1>
-    <p>Nothing here yet,<br>come back later.
+    <p>Check my blog out at:<br><a href="blog.html">Marilyn's Blogilyn</a>
       <br><br>
       Or have a listen to my Icecast stream, it plays 24/7 Sonic music.<br>
       <a href="http://15.204.236.62:8000/maril.ogg">http://15.204.236.62:8000/maril.ogg</a><br>
