--- a/blog.html
+++ b/blog.html
@@ -16,6 +16,10 @@
         to not put worry into others. As I'm typing this, I have started 
         work on making a blog page for <a href='https://maril.dev'>maril.dev</a>, in which 
         itself is still a placeholder.
+        <br><br>
+        EDIT:<br>
+        I'm not sure how I'll handle making blog entries, as right now everything is done
+        in raw HTML over at <a href="https://github.com/supeki/maril.dev">https://github.com/supeki/maril.dev</a>.<br>If you have any ideas, <a href="mailto:speccykitsune@gmail.com">please do send me an email.</a>
       </p>
     </div>
   </body>
