--- a/blog.html
+++ b/blog.html
@@ -20,6 +20,7 @@
         EDIT:<br>
         I'm not sure how I'll handle making blog entries, as right now everything is done
         in raw HTML over at <a href="https://github.com/supeki/maril.dev">https://github.com/supeki/maril.dev</a>.<br>If you have any ideas, <a href="mailto:speccykitsune@gmail.com">please do send me an email.</a>
+        <br>If you're too new for email, get in contact with using one of the methods over on my <a href="contacts.html">Contacts</a> page.
       </p>
     </div>
   </body>
