--- a/contacts.html
+++ b/contacts.html
@@ -13,6 +13,8 @@
       <ul>
         <li>Twitter/X: <a href="https://x.com/pettospec">@PettoSpec</a></li>
         <li>Discord: mysticrealmcommunityedition - Alt: mysticrealm</li>
+        <li>Email: <a href="mailto:speccykitsune@gmail.com">speccykitsune@gmail.com</a></li>
+        <li>Phone #: (337) 384-8227 (Text-preferred)</li>
       </ul>
     </p>
   </body>
