--- a/contacts.html
+++ b/contacts.html
@@ -5,6 +5,7 @@
   </head>
 
   <body>
+    <h2>My Contacts</h2>
     <p>
       This page contains all the possible ways to contact me.<br>
       If one way does not work, please try another way.<br>
