--- a/contacts.html
+++ b/contacts.html
@@ -10,10 +10,11 @@
       This page contains all the possible ways to contact me.<br>
       If one way does not work, please try another way.<br>
       <br>
-      <h3>MOST ACTIVE:</h3>
-      <ul>
+      <ul>MOST ACTIVE:
         <li>Twitter/X: <a href="https://x.com/pettospec">@PettoSpec</a></li>
         <li>Discord: mysticrealmcommunityedition - Alt: mysticrealm</li>
+      </ul>
+      <ul>
         <li>Email: <a href="mailto:speccykitsune@gmail.com">speccykitsune@gmail.com</a></li>
         <li>Phone #: (337) 384-8227 (Text-preferred)</li>
       </ul>
