--- a/contacts.html
+++ b/contacts.html
@@ -9,7 +9,8 @@
     <p>
       This page contains all the possible ways to contact me.<br>
       If one way does not work, please try another way.<br>
-      <ul>MOST ACTIVE:
+      <h3>MOST ACTIVE:</h3>
+      <ul>
         <li>Twitter/X: <a href="https://x.com/pettospec">@PettoSpec</a></li>
         <li>Discord: mysticrealmcommunityedition - Alt: mysticrealm</li>
       </ul>
