--- a/contacts.html
+++ b/contacts.html
@@ -9,8 +9,8 @@
     <p>
       This page contains all the possible ways to contact me.<br>
       If one way does not work, please try another way.<br>
-      <h3>MOST ACTIVE:</h3>
       <ul>
+        <strong>MOST ACTIVE:</strong>
         <li>Twitter/X: <a href="https://x.com/pettospec">@PettoSpec</a></li>
         <li>Discord: mysticrealmcommunityedition - Alt: mysticrealm</li>
       </ul>
