--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
 
   <body>
     <h1>Marilyn's Webilyn</h1>
-    <p>Check my blog out at:<br><a href="blog.html">Marilyn's Blogilyn</a>
-      <br><br>
+    <p>Check my blog out at:<br><a href="blog.html">Marilyn's Blogilyn</a><br>
+      Get in contact with me at:<br><a href="contacts.html">My Contact's</a><br>
+      <br>
       Or have a listen to my Icecast stream, it plays 24/7 Sonic music.<br>
       <a href="http://15.204.236.62:8000/maril.ogg">http://15.204.236.62:8000/maril.ogg</a><br>
       <a href="http://15.204.236.62:8000/maril.ogg.m3u">download m3u</a>
