--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <body>
     <h1>Marilyn's Webilyn</h1>
     <p>Check my blog out at:<br><a href="blog.html">Marilyn's Blogilyn</a><br>
-      Get in contact with me at:<br><a href="contacts.html">My Contact's</a><br>
+      Get in contact with me at:<br><a href="contacts.html">My Contacts</a><br>
       <br>
       Or have a listen to my Icecast stream, it plays 24/7 Sonic music.<br>
       <a href="http://15.204.236.62:8000/maril.ogg">http://15.204.236.62:8000/maril.ogg</a><br>
