--- a/blog.html
+++ b/blog.html
@@ -7,7 +7,7 @@
   <body>
     <div class='entry'>
       <h3>Marilyn's Blogilyn</h3>
-      <h4>10 Jan. 2025</h4>
+      <p>10 Jan. 2025</p>
       <hr>
       <p>
         Last night I checked my text messages to find that my girlfriend, 
