--- a/blog.html
+++ b/blog.html
@@ -7,10 +7,10 @@
 
   <body>
     <div class='entry'>
-      <h3>Marilyn's Blogilyn</h3>
-      <p>10 Jan. 2025</p>
+      <p class='title'>Marilyn's Blogilyn</p>
+      <p class='date'>10 Jan. 2025</p>
       <hr>
-      <p>
+      <p class='content'>
         Last night I checked my text messages to find that my girlfriend, 
         who shall not be named for privacy, had broke up with me. 
         This brought down my mood a bit, but I'm trying to remain neutral 
