--- a/blog.html
+++ b/blog.html
@@ -7,6 +7,21 @@
 
   <body>
     <div class='entry'>
+      <p class='title'>Ill with RSV and Site Update</p>
+      <p class='date'>15 Jan. 2025</p>
+      <hr>
+      <p class='content'>
+        Those who know me on Discord should know that I've been ill with RSV, 
+        (Respiratory System Virus) for the past 4-5 days. It's been pretty annoying
+        but now I've reached a state that I can go back to school, so that's nice.
+        <br><br>
+        Anyways, this page has received a slight touch as you can see. I'm having a go
+        at messing with CSS (Cascasing Style Sheets) again, hopefully it doesn't
+        impact the visibility on the PDA.
+      </p>
+    </div>
+    
+    <div class='entry'>
       <p class='title'>Marilyn's Blogilyn</p>
       <p class='date'>10 Jan. 2025</p>
       <hr>
