--- a/blog.html
+++ b/blog.html
@@ -17,7 +17,7 @@
         <br><br>
         Anyways, this page has received a slight touch as you can see. I'm having a go
         at messing with CSS (Cascasing Style Sheets) again, hopefully it doesn't
-        impact the visibility on the PDA.
+        impact the visibility on my HP Pocket PC.
       </p>
     </div>
     
