--- a/blog.html
+++ b/blog.html
@@ -17,7 +17,9 @@
         <br><br>
         Anyways, this page has received a slight touch as you can see. I'm having a go
         at messing with CSS (Cascasing Style Sheets) again, hopefully it doesn't
-        impact the visibility on my HP Pocket PC.
+        impact the visibility on my PDA.
+        <br><br>
+        EDIT: A PDA is a Pocket PC, I am not referring to the term "Public Display of Affection".
       </p>
     </div>
     
