--- a/blog.html
+++ b/blog.html
@@ -19,7 +19,8 @@
         at messing with CSS (Cascasing Style Sheets) again, hopefully it doesn't
         impact the visibility on my PDA.
         <br><br>
-        EDIT: A PDA is a Pocket PC, I am not referring to the term "Public Display of Affection".
+        EDIT: A PDA is a Pocket PC, I am not referring to the term "Public Display of Affection".<br>
+        EDIT EDIT: Maybe next update I'll share a photo of the blog on my PDA <3
       </p>
     </div>
     
