--- a/blog.html
+++ b/blog.html
@@ -7,6 +7,21 @@
 
   <body>
     <div class='entry'>
+      <p class='title'>Life Update</p>
+      <p class='date'>17 Jan. 2025</p>
+      <hr>
+      <p class='content'>
+        I've currently fallen behind in my studies in school, but I am slowly catching up.
+        I'll need to stay away from Discord and Twitter long enough to actually get my work done however,
+        so don't expect me to be on much outside of voice calls while I'm working on stuff.
+        <br><br>
+        Also, I will try to get a photo of the blog on the PDA later today if I am on my laptop.
+        No promises however. How do yall like the CSS update so far? I hope it was worth it, even if
+        it isn't much.
+      </p>
+    </div>
+    
+    <div class='entry'>
       <p class='title'>Ill with RSV and Site Update</p>
       <p class='date'>15 Jan. 2025</p>
       <hr>
