--- a/blog.html
+++ b/blog.html
@@ -7,6 +7,30 @@
 
   <body>
     <div class='entry'>
+      <p class='title'>Life Update pt. 2</p>
+      <p class='date'>24 Jan. 2025</p>
+      <hr>
+      <p class='content'>
+        Tomorrow will mark the 15th or 16th year of my younger step-brother Aiden's life. I haven't seen him in a long while
+        but I wish him well. I'll likely call him tomorrow, but I think I won't have much to say other than Happy Birthday.
+        <br><br>
+        Anyways, life has been going interesting, for better or worse. I've made a new Speccy model, which is based off my previous
+        model, but now with a few optimizations and actual bendable tails and a better armature. I plan to use this
+        model for any new projects of mine, as well as replacing the sprites in a few older projects. I would like to thank
+        LonelyFoxz for teaching me this new stuff I used to make the model, including mirroring and symmetrization.
+        <br><br>
+        Lonely (or Foxz [?]) has also been helping with one of my larger projects, Robo Blast Online. A theoretical multiplayer
+        RPG game based off Phantasy Star Online, being made in Sonic Robo Blast 2. He's made the model and animations for
+        Sonic, including a unique sword design that looks similar to an emblem! So I have a lot of thanks to give to him
+        as well as Bolt Zyphyr for helping contribute to the project. It wouldn't be anywhere without them, even if we've
+        just started...
+        <br><br>
+        Here's an image of the new model, it's hosted on Discord, so if it disappears, let me know.<br>
+        <img src="https://cdn.discordapp.com/attachments/1267216722453073962/1332099236069642291/image.png">
+      </p>
+    </div>
+    
+    <div class='entry'>
       <p class='title'>Life Update</p>
       <p class='date'>17 Jan. 2025</p>
       <hr>
