--- a/blog.html
+++ b/blog.html
@@ -26,7 +26,7 @@
         just started...
         <br><br>
         Here's an image of the new model, it's hosted on Discord, so if it disappears, let me know.<br>
-        <img src="https://cdn.discordapp.com/attachments/1267216722453073962/1332099236069642291/image.png">
+        <img src="https://cdn.discordapp.com/attachments/1267216722453073962/1332099236069642291/image.png?ex=6794ae57&is=67935cd7&hm=f70a7bf793a349d340ecd042c6fd2ccb6b2cac399229b8866e48cc3f0bc8fc11&">
       </p>
     </div>
     
