--- a/blog.html
+++ b/blog.html
@@ -7,6 +7,27 @@
 
   <body>
     <div class='entry'>
+      <p class='title'>Life Update pt. 3</p>
+      <p class='date'>3 Feb. 2025</p>
+      <hr>
+      <p class='content'>
+        I think I've lost it. I've lost it all. I would like to apologize to my dearest friend, Orion, who's been there for me for the longest time.
+        You do not deserve me, no one deserves me. 
+        <br><br>
+        I think I should also mention that I've lost another friend of mine. His name was Ethan Hargrave. He killed himself in the afternoon of the first of the month.
+        I was not notified until a full day after it happened, and only because my parents were told by my sister who was told by her friend who was told by her MUN peers.
+        <br><br>
+        I would like to apologize to my community for having to deal with me while I was slowly going insane the past few days, and I would like to apologize to everyone that I have
+        upset. I need a break, a really long break, one that might even change me entirely as a person moving on in life. I still love you Orion, but I need to move on I guess... go be happy with that other person.
+        <br><br>
+        As for my projects, for those of you that follow me for that. Those are not cancelled, they will be shadow dropped one day I suppose. But there will be no more updates until they're out.
+        <br><br>
+        To ensure my goodbye, I am deleting my Discord account, and I am no longer interacting on Twitter. I will still be in #srb2fun for a while, it's small and comfy... but I will not be in any large places, or in much a mood to talk.
+        <br>Maril out.
+      </p>
+    </div>
+    
+    <div class='entry'>
       <p class='title'>Life Update pt. 2</p>
       <p class='date'>24 Jan. 2025</p>
       <hr>
