--- a/blog.html
+++ b/blog.html
@@ -7,6 +7,20 @@
 
   <body>
     <div class='entry'>
+      <p class='title'>Life Update pt. 4</p>
+      <p class='date'>15 Feb. 2025</p>
+      <hr>
+      <p class='content'>
+        To put it shrimple, my life is awkward and weird. I think I need to take as long a break as I can from any major social platforms outside of IRC, and private messaging with certain individuals.
+        <br><br>
+        I have enlisted in the US Navy as a Cyber Warfare Technician in hopes of being able to figure out my future. Hopefully I'll be able to get a good degree in the Navy that will help if I choose to leave the Navy after 8 years.
+        <br><br>
+        Speccy v2 is going good, here's a video of it.<br>
+        <embed src="https://files.catbox.moe/t5c7so.mp4"/>
+      </p>
+    </div>
+    
+    <div class='entry'>
       <p class='title'>Life Update pt. 3</p>
       <p class='date'>3 Feb. 2025</p>
       <hr>
