--- a/contacts.html
+++ b/contacts.html
@@ -11,12 +11,13 @@
       If one way does not work, please try another way.<br>
       <ul>
         <strong>MOST ACTIVE:</strong>
-        <li>Twitter/X: <a href="https://x.com/pettospec">@PettoSpec</a></li>
-        <li>Discord: mysticrealmcommunityedition - Alt: mysticrealm</li>
+        <li>Twitter/X: <a href="https://x.com/pettospec">@PettoSpec</a> [Conditional Inactive.]</li>
+        <li><s>Discord: mysticrealmcommunityedition - Alt: mysticrealm</s> [Complete inactivity until the future.]</li>
       </ul>
       <ul>
-        <li>Email: <a href="mailto:speccykitsune@gmail.com">speccykitsune@gmail.com</a></li>
-        <li>Phone #: (337) 384-8227 (Text-preferred)</li>
+        <li>Email: <a href="mailto:speccykitsune@gmail.com">speccykitsune@gmail.com</a> [May not respond until a few days after.]</li>
+        <li>Phone #: (337) 384-8227 [Preferred contact method.]</li>
+        <li>IRC: irc.esper.net #srb2fun [Somewhat active, may also be idling.]</li>
       </ul>
     </p>
   </body>
