--- a/blog.html
+++ b/blog.html
@@ -7,6 +7,15 @@
 
   <body>
     <div class='entry'>
+      <p class='title'>Stuff</p>
+      <p class='date'>19 Feb. 2025</p>
+      <hr>
+      <p class='content'>
+        Well, scratch out that CWT job with the Navy, and replace it with NUC. I got the job in Nuclear Engineering, however I feel down. I don't want to disclose why I'm down, but I'm down.
+      </p>
+    </div>
+    
+    <div class='entry'>
       <p class='title'>Life Update pt. 4</p>
       <p class='date'>15 Feb. 2025</p>
       <hr>
