--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
     <p>Check my blog out at:<br><a href="blog.html">Marilyn's Blogilyn</a><br>
       Get in contact with me at:<br><a href="contacts.html">My Contacts</a><br>
       <br>
-      Or have a listen to my Icecast stream, it plays 24/7 Sonic music.<br>
-      <a href="http://15.204.236.62:8000/maril.ogg">http://15.204.236.62:8000/maril.ogg</a><br>
-      <a href="http://15.204.236.62:8000/maril.ogg.m3u">download m3u</a>
+      R.I.P. maril.dev icecast stream, you will be missed.
     </p>
   </body>
 </html>
