--- a/blog.html
+++ b/blog.html
@@ -7,6 +7,15 @@
 
   <body>
     <div class='entry'>
+      <p class='title'>Long time, no update!</p>
+      <p class='date'>28 Apr. 2025</p>
+      <hr>
+      <p class='content'>
+        We're almost done with the school year, and my final year in high school. Going back to school in person for my senior year was both a hard choice to make, but also one that was worth it. Soon I'll be going into basic training through the Navy, and then my 2 year A School. I may no longer be able to make updates, but I wish everyone who's been around me has a good time. I plan to release one more blog update before I go into basic training, so I'll see yall then. Hopefully I can push out an update to the main page too before then.
+      </p>
+    </div>
+    
+    <div class='entry'>
       <p class='title'>Stuff</p>
       <p class='date'>19 Feb. 2025</p>
       <hr>
