--- a/indexv2.html
+++ b/indexv2.html
@@ -19,6 +19,16 @@
       and storing the old one elsewhere.
     -->
     <link rel="stylesheet" href="indexv2.css">
+
+    <!--
+      Lazy generated favicons, I made the art though!
+      If you're reading this HTML document for some reason,
+      feel free to @me on Discord, or Twitter!
+    -->
+    <link rel="apple-touch-icon" sizes="180x180" href="resources/favilyns/touch.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="resources/favilyns/32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="resources/favilyns/16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
   </head>
   
   <body>
