--- a/indexv2.html
+++ b/indexv2.html
@@ -18,7 +18,7 @@
       own folder as well, redirecting the site to this new index,
       and storing the old one elsewhere.
     -->
-    <link rel="stylesheet" href="indexv2.css">
+    <link rel="stylesheet" href="resources/css/indexv2.css">
 
     <!--
       Lazy generated favicons, I made the art though!
