--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <p>Check my blog out at:<br><a href="blog.html">Marilyn's Blogilyn</a><br>
       Get in contact with me at:<br><a href="contacts.html">My Contacts</a><br>
       <br>
-      R.I.P. maril.dev icecast stream, you will be missed.
+      R.I.P. maril.dev icecast stream, you will be missed.<br>
+      Check out the new wip index page! <a href="indexv2.html">wip page here</a>
     </p>
   </body>
 </html>
