--- a/indexv2.html
+++ b/indexv2.html
@@ -29,6 +29,27 @@
     <link rel="icon" type="image/png" sizes="32x32" href="resources/favilyns/32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="resources/favilyns/16x16.png">
     <link rel="manifest" href="/site.webmanifest">
+
+    <!--
+      Some more standard stuff, meta tags that define what
+      our site is about, this'll show on platforms
+      such as Discord, and Twitter.
+
+      It also handles the character set we use, Unicode,
+      and it handles the scaling of the page on different
+      devices.
+    -->
+    <meta charset="UTF-8">
+    <meta name="keywords" content="Marilyn, Maril">    
+    <meta name="description" content="Made with love by me, Marilyn!">
+    <meta name="author" content="Marilyn">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- 
+      Define the base URL for our site, so we don't need to 
+      put https://maril.dev everywhere.
+    -->
+    <base href="https://maril.dev/" target="_blank">
   </head>
   
   <body>
