--- a/indexv2.html
+++ b/indexv2.html
@@ -53,6 +53,6 @@
   </head>
   
   <body>
-    <p>dummy text.<br>look at the cool favicon!!<br>i call it the favilyn.</p>
+    <p>dummy text.<br>look at the cool favicon!!<br>i call it the favilyn. here it is at it's base res!!!<br><img src="resources/favilyns/32x32.png" /></p>
   </body>
 </html>
