--- a/indexv2.html
+++ b/indexv2.html
@@ -53,6 +53,13 @@
   </head>
   
   <body>
-    <p>dummy text.<br>look at the cool favicon!!<br>i call it the favilyn. here it is at its base res!!!<br><img src="resources/favilyns/32x32.png" /></p>
+    <div class="topbar">
+      <img class="title" src="webilyntitle.png" />
+      <a href="index.html">
+    </div>
+
+    <div class="main">
+      <p>dummy text.<br>look at the cool favicon!!<br>i call it the favilyn. here it is at its base res!!!<br><img src="resources/favilyns/32x32.png" /></p>
+    </div>
   </body>
 </html>
