--- a/indexv2.html
+++ b/indexv2.html
@@ -54,7 +54,7 @@
   
   <body>
     <div class="topbar">
-      <img class="title" src="webilyntitle.png" />
+      <img class="title" src="resources/images/webilyntitle.png" />
       <a href="index.html">
     </div>
 
