--- a/indexv2.html
+++ b/indexv2.html
@@ -55,7 +55,7 @@
   <body>
     <div class="topbar">
       <img class="title" src="resources/images/webilyntitle.png" />
-      <a href="index.html">
+      <a href="index.html">Old Index</a>
     </div>
 
     <div class="main">
