--- a/indexv2.html
+++ b/indexv2.html
@@ -53,9 +53,12 @@
   </head>
   
   <body>
-    <div class="topbar">
-      <a href="index.html">Old Index</a>
-      <img class="title" src="resources/images/webilyntitle.png" />
+    <div class="bottombar">
+      <div class="links">
+        <a href="index.html">Old Index</a>
+      </div>
+      
+      <img src="resources/images/webilyntitle.png" />
     </div>
 
     <div class="main">
