--- a/indexv2.html
+++ b/indexv2.html
@@ -49,7 +49,7 @@
       Define the base URL for our site, so we don't need to 
       put https://maril.dev everywhere.
     -->
-    <base href="https://maril.dev/" target="_blank">
+    <base href="https://maril.dev/">
   </head>
   
   <body>
