--- a/indexv2.html
+++ b/indexv2.html
@@ -53,11 +53,8 @@
   </head>
   
   <body>
-    <div class="bottombar">
-      <div class="links">
-        <a href="index.html">Old Index</a>
-      </div>
-      
+    <div class="titlebar">
+      <a href="index.html">Old Index</a>
       <img src="resources/images/webilyntitle.png" />
     </div>
 
