--- a/indexv2.html
+++ b/indexv2.html
@@ -53,11 +53,34 @@
   </head>
   
   <body>
-    <div class="titlebar">
-      <a href="index.html">Old Index</a>
-      <img src="resources/images/webilyntitle.png" />
+    <!-- 
+      This should be copy-pasted across every HTML document
+      and as long as it's setup properly, it should look fine??
+    -->
+    <div class="webilyn-sidebar">
+      <!-- 
+        The website's logo/icon, always at the top-left...
+        unless...? Mobile support may be interesting.
+      -->
+      <div class="webilyn-iconilyn">
+        <a href="indexv2.html">
+          <img src="resources/webilyntitle.png" />
+        </a>
+      </div>
+      
+      <!-- 
+        "Quick Links", essentially just links to important
+        parts of the site, as well as 88x31 buttons...
+      -->
+      <div class="webilyn-quicklinks>
+        <a href="index.html">Old Index</a>
+      </div>
     </div>
 
+    <!-- 
+      Finally, the main part of the site, this spans almost 
+      the entire right side of the page right after the sidebar.
+    -->
     <div class="main">
       <p>dummy text.<br>look at the cool favicon!!<br>i call it the favilyn. here it is at its base res!!!<br><img src="resources/favilyns/32x32.png" /></p>
     </div>
