--- a/indexv2.html
+++ b/indexv2.html
@@ -64,7 +64,7 @@
       -->
       <div class="webilyn-iconilyn">
         <a href="indexv2.html">
-          <img src="resources/webilyntitle.png" />
+          <img src="resources/images/webilyntitle.png" />
         </a>
       </div>
       
