--- a/indexv2.html
+++ b/indexv2.html
@@ -73,7 +73,7 @@
         parts of the site, as well as 88x31 buttons...
       -->
       <div class="webilyn-quicklinks>
-        <a href="index.html">Old Index</a>
+        <a href="index.html"><p>Old Index</p></a>
       </div>
     </div>
 
