--- a/indexv2.html
+++ b/indexv2.html
@@ -72,7 +72,7 @@
         "Quick Links", essentially just links to important
         parts of the site, as well as 88x31 buttons...
       -->
-      <div class="webilyn-quicklinks>
+      <div class="webilyn-quicklinks">
         <a href="index.html">Old Index</a>
       </div>
     </div>
