--- a/indexv2.html
+++ b/indexv2.html
@@ -81,7 +81,7 @@
       Finally, the main part of the site, this spans almost 
       the entire right side of the page right after the sidebar.
     -->
-    <div class="main">
+    <div class="webilyn-main">
       <p>dummy text.<br>look at the cool favicon!!<br>i call it the favilyn. here it is at its base res!!!<br><img src="resources/favilyns/32x32.png" /></p>
     </div>
   </body>
