--- a/indexv2.html
+++ b/indexv2.html
@@ -74,6 +74,11 @@
       -->
       <div class="webilyn-quicklinks">
         <a href="index.html">Old Index</a>
+        <a href="index.html">
+          Blog
+          <br>
+          <p>(Will bring you to a separate page.)</p>
+        </a>
       </div>
     </div>
 
