--- a/indexv2.html
+++ b/indexv2.html
@@ -74,7 +74,7 @@
       -->
       <div class="webilyn-quicklinks">
         <a href="index.html">Old Index</a>
-        <a href="index.html">
+        <a href="blog.html">
           Blog
           <br>
           <p>(Will bring you to a separate page.)</p>
