--- a/contacts.html
+++ b/contacts.html
@@ -12,7 +12,7 @@
       <ul>
         <strong>MOST ACTIVE:</strong>
         <li>Twitter/X: <a href="https://x.com/pettospec">@PettoSpec</a> [Conditional Inactive.]</li>
-        <li><s>Discord: mysticrealmcommunityedition - Alt: mysticrealm</s> [Complete inactivity until the future.]</li>
+        <li>Discord: mysticrealmcommunityedition - Alt: mysticrealm</s> [Preferred contact method.]</li>
       </ul>
       <ul>
         <li>Email: <a href="mailto:speccykitsune@gmail.com">speccykitsune@gmail.com</a> [May not respond until a few days after.]</li>
