--- a/contacts.html
+++ b/contacts.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Contacts - Marilyn's Webilyn</title>
+    <title>Marilyn's Contacts</title>
   </head>
 
   <body>
