--- a/indexv2.html
+++ b/indexv2.html
@@ -73,12 +73,10 @@
         parts of the site, as well as 88x31 buttons...
       -->
       <div class="webilyn-quicklinks">
+        <h3>Quick Links</h3>
         <a href="index.html">Old Index</a>
-        <a href="blog.html">
-          Blog
-          <br>
-          <p>(Will bring you to a separate page.)</p>
-        </a>
+        <a href="blog.html">Blog</a>
+        <p>(Quick links may bring you to a page without the sidebar. To return, click the back button.)</p>
       </div>
     </div>
 
