--- a/blog.html
+++ b/blog.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Marilyn's Blogilyn</title>
-    <link rel="stylesheet" href="css/blog.css">
+    <link rel="stylesheet" href="resources/css/blog.css">
   </head>
 
   <body>
