--- a/indexv2.html
+++ b/indexv2.html
@@ -78,6 +78,8 @@
         <a href="blog.html">Blog</a>
         <p>(Quick links may bring you to a page without the sidebar. To return, click the back button.)</p>
       </div>
+
+      <a href="contacts.html" style="bottom:0;">Contact me!</a>
     </div>
 
     <!-- 
