--- a/indexv2.html
+++ b/indexv2.html
@@ -79,7 +79,7 @@
         <p>(Quick links may bring you to a page without the sidebar. To return, click the back button.)</p>
       </div>
 
-      <a href="contacts.html" style="bottom:0;">Contact me!</a>
+      <a href="contacts.html" style="text-align:center;bottom:0;margin:4px;">Contact me!</a>
     </div>
 
     <!-- 
