--- a/indexv2.html
+++ b/indexv2.html
@@ -79,7 +79,7 @@
         <p>(Quick links may bring you to a page without the sidebar. To return, click the back button.)</p>
       </div>
 
-      <a href="contacts.html" style="text-align:center;margin-top:auto;">Contact me!</a>
+      <a class="webilyn-contactme" href="contacts.html">Contact me!</a>
     </div>
 
     <!-- 
