--- a/indexv2.html
+++ b/indexv2.html
@@ -79,7 +79,10 @@
         <p>(Quick links may bring you to a page without the sidebar. To return, click the back button.)</p>
       </div>
 
-      <a class="webilyn-contactme" href="contacts.html">Contact me!</a>
+      <!-- Web dev is annoying sometimes, mayhaps this will do. -->
+      <div class="webilyn-contactme">
+        <a href="contacts.html">Contact me!</a>
+      </div>
     </div>
 
     <!-- 
