--- a/indexv2.html
+++ b/indexv2.html
@@ -86,9 +86,7 @@
       </div>
 
       <div class="webilyn-copyright">
-        <p>
-          © 2025 Marilyn. All rights reserved.
-        </p>
+        <p>© 2025 Marilyn. All rights reserved.</p>
       </div>
     </div>
 
