--- a/indexv2.html
+++ b/indexv2.html
@@ -107,5 +107,9 @@
         Between Speccy and Legacy Speccy, I tried to do a bit of story-building with Speccy, making projects such as Speccy Adventure, and its sequel Speccy Adventure 2, yet neither saw the light of day. <continue later>
       </p>
     </div>
+
+    <div class="webilyn-picture">
+      <img src="resources/images/webilynpic1.png" />
+    </div>
   </body>
 </html>
