--- a/indexv2.html
+++ b/indexv2.html
@@ -108,8 +108,10 @@
       </p>
     </div>
 
-    <div class="webilyn-picture">
-      <img src="resources/images/webilynpic1.png" />
+    <div class="webilyn-sidebar2">
+      <div class="webilyn-picture">
+        <img src="resources/images/webilynpic1.png" />
+      </div>
     </div>
   </body>
 </html>
