--- a/indexv2.html
+++ b/indexv2.html
@@ -96,8 +96,8 @@
     -->
     <div class="webilyn-main">
       <p>
-        Hi, I'm Marilyn!<br>
-        An intermediate programmer studying Lua, HTML/CSS/JS, C, and many other programming languages.<br>
+        Hi, I'm <span style="color: peachpuff;">Marilyn</span>!<br>
+        An intermediate programmer studying <span style="color: blue;">Lua</span>, <span style="color: orange;">HTML/CSS/JS</span>, <span style="color: blue;">C</span>, and many other programming languages.<br>
         <br>
         I got my start in 2016 when I got my hands on a Nintendo DSi XL, still one of my favorite consoles. It came with an application called Petit Computer, a simple BASIC sandbox with spriting, a simple syntax, and many examples to build off of. It forever changed me, and eventually got me into learning Lua so I could make mods for a game I enjoy, Sonic Robo Blast 2.<br><br>
         Sonic Robo Blast 2 is a non-profit, community-made (but not ran :/) Sonic fangame that's been around since 1998, taking most of its ideas from the Sonic games of the era. Using my newfound Lua knowledge, I made my first add-on, QoL Sonic. He's just Sonic with his Hyper form from Sonic 3 & Knuckles, alongside a homing attack, accelerative playstyle, and many niche additions. Unfortunately, he was never properly archived or preserved, so he's lost to time. My next project however would be much greater, and is probably why a few people actually knew me early on. Speccy's Dungeon Crawler.<br><br>
