--- a/indexv2.html
+++ b/indexv2.html
@@ -74,7 +74,7 @@
       -->
       <div class="webilyn-quicklinks">
         <h3>Quick Links</h3>
-        <a href="indexv2.html">Home<br><p>You are here!</p></a>
+        <a href="indexv2.html">Home</a>
         <a href="index.html">Old Index</a>
         <a href="blog.html">Blog</a>
         <p>(Quick links may bring you to a page without the sidebar. To return, click the back button.)</p>
