--- a/indexv2.html
+++ b/indexv2.html
@@ -109,6 +109,24 @@
     </div>
 
     <div class="webilyn-sidebar2">
+      <div>
+        <script src="https://giscus.app/client.js"
+          data-repo="supeki/maril.dev"
+          data-repo-id="R_kgDOMOvEeg"
+          data-category="General"
+          data-category-id="DIC_kwDOMOvEes4CptGb"
+          data-mapping="url"
+          data-strict="0"
+          data-reactions-enabled="1"
+          data-emit-metadata="0"
+          data-input-position="bottom"
+          data-theme="preferred_color_scheme"
+          data-lang="en"
+          crossorigin="anonymous"
+          async>
+        </script>
+      </div>
+      
       <div class="webilyn-picture">
         <img src="resources/images/webilynpic1.png" />
       </div>
