--- a/indexv2.html
+++ b/indexv2.html
@@ -131,5 +131,15 @@
         <img src="resources/images/webilynpic1.png" />
       </div>
     </div>
+
+    <div class="webilyn-mobilebar">
+      <div class="webilyn-mobileiconilyn">
+        <a href="indexv2.html">
+          <img src="resources/images/webilyntitle.png" />
+        </a>
+      </div>
+
+      
+    </div>
   </body>
 </html>
