--- a/indexv2.html
+++ b/indexv2.html
@@ -109,7 +109,8 @@
     </div>
 
     <div class="webilyn-sidebar2">
-      <div>
+      <div class="webilyn-comments">
+        <p>Send ideas and comments to my GitHub Discussions page!</p>
         <script src="https://giscus.app/client.js"
           data-repo="supeki/maril.dev"
           data-repo-id="R_kgDOMOvEeg"
@@ -138,8 +139,6 @@
           <img src="resources/images/webilyntitle.png" />
         </a>
       </div>
-
-      
     </div>
   </body>
 </html>
