--- a/indexv2.html
+++ b/indexv2.html
@@ -110,7 +110,7 @@
 
     <div class="webilyn-sidebar2">
       <div class="webilyn-comments">
-        <p>Send ideas and comments to my GitHub Discussions page!</p>
+        <p style="color: black; margin-bottom: 4px;">Send ideas and comments to my GitHub Discussions page!</p>
         <script src="https://giscus.app/client.js"
           data-repo="supeki/maril.dev"
           data-repo-id="R_kgDOMOvEeg"
