--- a/blog.html
+++ b/blog.html
@@ -7,6 +7,15 @@
 
   <body>
     <div class='entry'>
+      <p class='title'>Longer time, have an update.</p>
+      <p class='date'>25 Aug. 2025</p>
+      <hr>
+      <p class='content'>
+        I've decided not to continue with my plan to go into the US Navy. It was a decision I made because it's not what I wanted for myself. I want to be able to live the life I want, and I will fight until I get it. In other words, I'm back. :)
+      </p>
+    </div>
+    
+    <div class='entry'>
       <p class='title'>Long time, no update!</p>
       <p class='date'>28 Apr. 2025</p>
       <hr>
