--- a/speccy_game/index.html
+++ b/speccy_game/index.html
@@ -82,6 +82,11 @@
     // RUNTIMESTARTEND
 </script>
 
+<div>
+	<p>How to solve audio not playing: Click the canvas when it's loading. That's all I can say, sorry.</p>
+</div>
+
 </body>
 </html>
+
 
