--- a/speccy_game/index.html
+++ b/speccy_game/index.html
@@ -38,6 +38,11 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
   <meta name="HandheldFriendly" content="true" />
 
+  <link rel="apple-touch-icon" sizes="180x180" href="resources/favilyns/touch.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="resources/favilyns/32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="resources/favilyns/16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+
   <title>speccy game (demo)</title>
 
 	<script>
@@ -88,6 +93,7 @@
 
 </body>
 </html>
+
 
 
 
