--- a/speccy_game/index.html
+++ b/speccy_game/index.html
@@ -67,7 +67,7 @@
 	<p>Move: Arrow Keys - Jump: Left/Right Shift</p>
 </div>
 	
-<div style="display: inline-block; -webkit-user-select: none; text-align: left; width: 320; height:240;">
+<div style="display: inline-block; -webkit-user-select: none; text-align: left;">
     <canvas id="MMFCanvas" width="320" height="240">
     	Your browser does not support Canvas.
     </canvas>
@@ -93,6 +93,7 @@
 
 </body>
 </html>
+
 
 
 
