--- a/speccy_game/index.html
+++ b/speccy_game/index.html
@@ -89,10 +89,14 @@
 
 <div>
 	<p>How to solve audio not playing: Click the canvas when it's loading. That's all I can say, sorry.</p>
+	<br><br>
+	<h3>Windows</h3>
+	<a _href="/speccy game (demo).zip"><p>Download</p></a>
 </div>
 
 </body>
 </html>
+
 
 
 
