--- a/speccy_game/index.html
+++ b/speccy_game/index.html
@@ -13,7 +13,8 @@
 	  font-size: small;
   }
   body {
-	  background-color: #FFF;
+	  background-image: url("bg.gif");
+	  background-repeat: repeat;
       text-align: center;
       margin: 0;
       padding: 0;
@@ -96,6 +97,7 @@
 
 </body>
 </html>
+
 
 
 
