--- a/speccy_game/index.html
+++ b/speccy_game/index.html
@@ -2,15 +2,9 @@
 <html lang="en">
 
 <style type="text/css">
-  h1 {
+  h1, h2, h3, h4, h5, h6, p {
 	  font-family: Arial, Helvetica, sans-serif;
-	  color: #F00;
-	  font-size: x-large;
-  }
-  p {
-	  font-family: Arial, Helvetica, sans-serif;
-	  color: #000;
-	  font-size: small;
+	  color: #FFFFFF;
   }
   body {
 	  background-image: url("bg.gif");
@@ -97,6 +91,7 @@
 
 </body>
 </html>
+
 
 
 
