--- a/speccy_game/index.html
+++ b/speccy_game/index.html
@@ -86,11 +86,12 @@
 	<p>How to solve audio not playing: Click the canvas when it's loading. That's all I can say, sorry.</p>
 	<br><br>
 	<h3>Windows</h3>
-	<a href="/speccy game (demo).zip"><p>Download</p></a>
+	<a href="speccy game (demo).zip"><p>Download</p></a>
 </div>
 
 </body>
 </html>
+
 
 
 
