--- a/speccy_game/index.html
+++ b/speccy_game/index.html
@@ -36,7 +36,7 @@
   <link rel="apple-touch-icon" sizes="180x180" href="resources/favilyns/touch.png">
   <link rel="icon" type="image/png" sizes="32x32" href="resources/favilyns/32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="resources/favilyns/16x16.png">
-  <link rel="manifest" href="/site.webmanifest">
+  <link rel="manifest" href="site.webmanifest">
 
   <title>speccy game (demo)</title>
 
@@ -91,6 +91,7 @@
 
 </body>
 </html>
+
 
 
 
