--- a/speccy_adventure/index.html
+++ b/speccy_adventure/index.html
@@ -8,7 +8,8 @@
   }
   body {
 	  background-image: url("bg.png");
-	  background-repeat: repeat;
+	  background-repeat: no-repeat;
+	  background-size: cover;
       text-align: center;
       margin: 0;
       padding: 0;
