--- a/speccy_adventure/index.html
+++ b/speccy_adventure/index.html
@@ -39,7 +39,7 @@
   <link rel="icon" type="image/png" sizes="16x16" href="resources/favilyns/16x16.png">
   <link rel="manifest" href="site.webmanifest">
 
-  <title>speccy game (demo)</title>
+  <title>Speccy Adventure (DEMO)</title>
 
 	<script>
 	   	// Detection of old browsers that do not support the canvas element
