--- a/speccy_adventure/index.html
+++ b/speccy_adventure/index.html
@@ -10,6 +10,8 @@
 	  background-image: url("bg.png");
 	  background-repeat: no-repeat;
 	  background-size: cover;
+	  background-color: black;
+	  opacity: 0.5;
       text-align: center;
       margin: 0;
       padding: 0;
