--- a/speccy_adventure/index.html
+++ b/speccy_adventure/index.html
@@ -9,8 +9,8 @@
 		  background-image: url("bg.png");
 		  background-repeat: no-repeat;
 		  background-size: cover;
-		  background-color: black;
-		  opacity: 0.5;
+		  background-color: rgba(0, 0, 0, 0.5);
+		  background-blend-mode: darken;
 		  text-align: center;
 		  margin: 0;
 		  padding: 0;
