--- a/indexv2.html
+++ b/indexv2.html
@@ -77,6 +77,7 @@
         <a href="indexv2.html">Home</a>
         <a href="index.html">Old Index</a>
         <a href="blog.html">Blog</a>
+        <a href="speccy_adventure/">Speccy Adventure</a>
         <p>(Quick links may bring you to a page without the sidebar. To return, click the back button.)</p>
       </div>
 
