--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       <div class="webilyn-quicklinks">
         <h3>Quick Links</h3>
         <a href="indexv2.html">Home</a>
-        <a href="index.html">Old Index</a>
+        <!-- <a href="index.html">Old Index</a> This no longer exists! -->
         <a href="blog.html">Blog</a>
         <a href="speccy_adventure/">Speccy Adventure</a>
         <p>(Quick links may bring you to a page without the sidebar. To return, click the back button.)</p>
