--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     </div>
     
     <div class="other-sites">
-      <a href="http://srb2.org"><img src="/graphics/buttons/srb2.bmp" alt="A 88x31 button depicting Sonic the Hedgehog with his hand out, asking Did you collect all those Chaos Emeralds?"></a>
-      <a href="http://weather.com"><img src="/graphics/buttons/weather.bmp" alt="A 88x31 button displaying The Weather Channel, and its slogan Bringing Weather to Life."></a>
+      <a href="http://srb2.org"><img src="/graphics/buttons/srb2.bmp" alt="http://srb2.org"></a>
+      <a href="http://weather.com"><img src="/graphics/buttons/weather.bmp" alt="http://weather.com"></a>
     </div>
   </body>
 </html>
