Update image formats for external links

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     </div>
     
     <div class="other-sites">
-      <a href="http://srb2.org"><img src="/graphics/buttons/srb2.bmp" alt="http://srb2.org"></a>
-      <a href="http://weather.com"><img src="/graphics/buttons/weather.bmp" alt="http://weather.com"></a>
+      <a href="http://srb2.org"><img src="/graphics/buttons/srb2.gif" alt="http://srb2.org"></a>
+      <a href="http://weather.com"><img src="/graphics/buttons/weather.gif" alt="http://weather.com"></a>
     </div>
   </body>
 </html>
