--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <base href="http://maril.dev">
     <title>Marilyn's Webilyn</title>
-    <link rel="stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href="http://maril.dev/css/index.css">
   </head>
 
   <body>
@@ -15,8 +14,8 @@
     </div>
     
     <div class="other-sites">
-      <a href="http://srb2.org"><img src="/graphics/buttons/srb2.gif" alt="http://srb2.org"></a>
-      <a href="http://weather.com"><img src="/graphics/buttons/weather.gif" alt="http://weather.com"></a>
+      <a href="http://srb2.org"><img src="http://maril.dev/graphics/buttons/srb2.gif" alt="http://srb2.org"></a>
+      <a href="http://weather.com"><img src="http://maril.dev/graphics/buttons/weather.gif" alt="http://weather.com"></a>
     </div>
   </body>
 </html>
