Update stylesheet and links to use HTTPS

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Marilyn's Webilyn</title>
-    <link rel="stylesheet" href="http://maril.dev/css/index.css">
+    <link rel="stylesheet" href="https://maril.dev/css/index.css">
   </head>
 
   <body>
@@ -14,8 +14,8 @@
     </div>
     
     <div class="other-sites">
-      <a href="http://srb2.org"><img src="http://maril.dev/graphics/buttons/srb2.gif" alt="http://srb2.org"></a>
-      <a href="http://weather.com"><img src="http://maril.dev/graphics/buttons/weather.gif" alt="http://weather.com"></a>
+      <a href="https://srb2.org"><img src="https://maril.dev/graphics/buttons/srb2.gif" alt="https://srb2.org"></a>
+      <a href="https://weather.com"><img src="https://maril.dev/graphics/buttons/weather.gif" alt="https://weather.com"></a>
     </div>
   </body>
 </html>
