--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   </head>
 
   <body>
+    <img class="title" src="https://maril.dev/graphics/title.gif" alt="Marilyn's Webilyn">
+    
     <div class="notice">
       <p>
         Future home of Marilyn's Webilyn.<br>
