Add copyright section to index.html

--- a/index.html
+++ b/index.html
@@ -19,5 +19,11 @@
       <a href="https://srb2.org"><img src="https://maril.dev/graphics/buttons/srb2.gif" alt="https://srb2.org"></a>
       <a href="https://weather.com"><img src="https://maril.dev/graphics/buttons/weather.gif" alt="https://weather.com"></a>
     </div>
+
+    <div class="copyright">
+      <p>
+        Marilyn's Webilyn © Marilyn Nozomi 2025
+      </p>
+    </div>
   </body>
 </html>
